# gnome-piped

./: README.md  fr.oupson.Piped.json  meson.build  meson_options.txt
data/: fr.oupson.Piped.desktop.in  fr.oupson.Piped.gschema.xml  fr.oupson.Piped.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  main.vala  meson.build  piped.gresource.xml  square-frame.vala  stream-item-factory.vala  video-grid.ui  video-grid.vala  video-view.ui  video-view.vala  window.ui  window.vala
src/piped-api/: api-client.vala  contentitem.vala  meson.build  metainfo.vala  pipedstream.vala  streamitem.vala  streams.vala  subtitle.vala
